deployment/base/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-deployment
  labels:
    app: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: okworkshopacr.azurecr.io/backstage:latest
          ports:
            - containerPort: 7007
              name: http
